[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Modules/Games/Identify an Image/Game Identify/GameIdentify.gd" type="Script" id=3]
[ext_resource path="res://Assets/Other Themes/FlatUI/kenvector_future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Other Themes/FlatUI/kenneyUI-green.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[node name="GameIdentify" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -514.0
margin_top = -276.0
margin_right = 514.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( -948, -304 )
custom_constants/separation = 32

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
margin_right = 544.0
margin_bottom = 552.0
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 2

[node name="BoxIdentify1" type="VBoxContainer" parent="HBoxContainer/GridContainer"]
margin_right = 256.0
margin_bottom = 260.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/BoxIdentify1"]
margin_right = 256.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
theme = ExtResource( 5 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Answer1" type="Button" parent="HBoxContainer/GridContainer/BoxIdentify1"]
margin_top = 196.0
margin_right = 256.0
margin_bottom = 260.0
rect_min_size = Vector2( 256, 64 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Jawaban 1"

[node name="BoxIdentify2" type="VBoxContainer" parent="HBoxContainer/GridContainer"]
margin_left = 288.0
margin_right = 544.0
margin_bottom = 260.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/BoxIdentify2"]
margin_right = 256.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
theme = ExtResource( 5 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Answer2" type="Button" parent="HBoxContainer/GridContainer/BoxIdentify2"]
margin_top = 196.0
margin_right = 256.0
margin_bottom = 260.0
rect_min_size = Vector2( 256, 64 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Jawaban 2"

[node name="BoxIdentify3" type="VBoxContainer" parent="HBoxContainer/GridContainer"]
margin_top = 292.0
margin_right = 256.0
margin_bottom = 552.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/BoxIdentify3"]
margin_right = 256.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
theme = ExtResource( 5 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Answer3" type="Button" parent="HBoxContainer/GridContainer/BoxIdentify3"]
margin_top = 196.0
margin_right = 256.0
margin_bottom = 260.0
rect_min_size = Vector2( 256, 64 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Jawaban 3"

[node name="BoxIdentify4" type="VBoxContainer" parent="HBoxContainer/GridContainer"]
margin_left = 288.0
margin_top = 292.0
margin_right = 544.0
margin_bottom = 552.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GridContainer/BoxIdentify4"]
margin_right = 256.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
theme = ExtResource( 5 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Answer4" type="Button" parent="HBoxContainer/GridContainer/BoxIdentify4"]
margin_top = 196.0
margin_right = 256.0
margin_bottom = 260.0
rect_min_size = Vector2( 256, 64 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Jawaban 4"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 576.0
margin_right = 580.0
margin_bottom = 552.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 612.0
margin_right = 1028.0
margin_bottom = 552.0
rect_min_size = Vector2( 416, 0 )
alignment = 1

[node name="WordLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 416.0
margin_bottom = 254.0
rect_min_size = Vector2( 378, 0 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Kata"
align = 1
valign = 1

[node name="SpellingLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 416.0
margin_bottom = 294.0
rect_min_size = Vector2( 378, 0 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "E-Ja-An"
align = 1
valign = 1

[node name="TypeLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 416.0
margin_bottom = 334.0
rect_min_size = Vector2( 378, 0 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Tipe"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 592.0
margin_right = 1024.0
margin_bottom = 133.0
custom_constants/separation = 8

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
margin_right = 432.0
margin_bottom = 36.0
rect_min_size = Vector2( 256, 32 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Sisa Waktu: 5"
align = 2
valign = 1

[node name="BerryCollected" type="Label" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 432.0
margin_bottom = 80.0
rect_min_size = Vector2( 256, 32 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Didapat: 10000"
align = 2
valign = 1

[node name="BerryGet" type="Label" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 432.0
margin_bottom = 124.0
rect_min_size = Vector2( 256, 32 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Berry: 0"
align = 2
valign = 1

[node name="LivesLeft" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -152.0
margin_right = -64.0
margin_bottom = -113.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Nyawa: 3"
align = 1
valign = 1

[node name="GivenTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
autostart = true

[node name="SecondTimer" type="Timer" parent="."]
process_mode = 0
autostart = true

[connection signal="pressed" from="HBoxContainer/GridContainer/BoxIdentify1/Answer1" to="." method="_on_Answer1_pressed"]
[connection signal="pressed" from="HBoxContainer/GridContainer/BoxIdentify2/Answer2" to="." method="_on_Answer2_pressed"]
[connection signal="pressed" from="HBoxContainer/GridContainer/BoxIdentify3/Answer3" to="." method="_on_Answer3_pressed"]
[connection signal="pressed" from="HBoxContainer/GridContainer/BoxIdentify4/Answer4" to="." method="_on_Answer4_pressed"]
[connection signal="timeout" from="GivenTimer" to="." method="_on_GivenTimer_timeout"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
